@@ -1,18 +1,43 @@
 package sample;
 
 import javafx.application.Application;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.Parent;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
 import javafx.scene.Scene;
+import javafx.scene.control.Button;
+import javafx.scene.layout.GridPane;
+import javafx.scene.layout.HBox;
 import javafx.stage.Stage;
 
-public class View extends Application {//therhsfhrdthrtshmtjgiotghijghbkjrghbkjdrgbhk
 
-    @Override
-    public void start(Stage primaryStage) throws Exception{
-        Parent root = FXMLLoader.load(getClass().getResource("sample.fxml"));
-        primaryStage.setTitle("Hello World");
-        primaryStage.setScene(new Scene(root, 300, 275));
+public class View extends Application {
+
+    Button button;
+
+    public void start(Stage primaryStage) throws Exception {
+        GraphicalUI gui = new GraphicalUI();
+        primaryStage.setTitle("Company");
+        GridPane gridPane= new GridPane();
+        GridPane gridPane1= new GridPane();
+        Scene scene = new Scene(gridPane,500,500);
+        Scene scene1 = new Scene(gridPane1,300,300);
+        Button b = new Button("hi");
+        b.setOnAction(new EventHandler<ActionEvent>() {
+            @Override
+            public void handle(ActionEvent actionEvent) {
+                gui.showMessege("ma kore ya hamod");
+            }
+        });
+        gridPane.getChildren().add(b);
+        Button b2 = new Button("<- back");
+        gridPane1.getChildren().add(b2);
+        b2.setOnAction(new EventHandler<ActionEvent>() {
+            @Override
+            public void handle(ActionEvent actionEvent) {
+                primaryStage.setScene(scene);
+            }
+        });
+        primaryStage.setScene(scene);
         primaryStage.show();
     }
 
@@ -20,5 +45,5 @@ public class View extends Application {//therhsfhrdthrtshmtjgiotghijghbkjrghbkjd
     public static void main(String[] args) {
         launch(args);
     }
+
 }
-//--module-path "C:\Users\yinon\הנדסת תוכנה קבצים - לפטופ\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml
